[tool.poetry]
name = "aioeos"
version = "1.0.2"
description = "Async library for interacting with EOS.io blockchain"
authors = ["NEMO"]
license = "MIT"
readme = "README.md"
homepage = "https://ulam.io/"
repository = "https://github.com/ulamlabs/aioeos"
documentation = "https://aioeos.readthedocs.io/en/latest/"
keywords = ["blockchain", "eos", "async", "eosio", "cryptocurrency"]

[tool.poetry.dependencies]
aiohttp = "^3.3.1"
base58 = "^2.1.1"
ecdsa = "^0.18"
python = "^3.7"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.6"
flake8 = "^5.0.4"
mypy = "^1.4"
pytest = "^7.4.3"
pytest-aiohttp = "^0.3.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.0.0"
sphinx = "^4.3.2"
sphinx_rtd_theme = "^1.3.0"
sphinx-autodoc-typehints = "^1.17.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
